// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poker close diverter during deal 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "8H",
    "iCenter2": "QS",
    "iCenter3": "QD",
    "iLeft1": "AH",
    "iLeft2": "JD",
    "iLeft3": "QH",
    "iLeft4": "7S",
    "iMini1": "5C",
    "iMini2": "7D",
    "iMini3": "10H",
    "iRight1": "KH",
    "iRight2": "7H",
    "iRight3": "JS",
    "iRight4": "5D",
    "iRight5": "6S",
    "iSS1": Object {
      "fill": [Function],
    },
    "iSS2": Object {
      "fill": [Function],
    },
    "iSS3": Object {
      "fill": [Function],
    },
    "iSS4": Object {
      "fill": [Function],
    },
    "iSS5": Object {
      "fill": [Function],
    },
    "iSS6": Object {
      "fill": [Function],
    },
    "iSpinner": "",
    "iUpper21": "JH",
    "iUpper22": "7C",
    "iUpper31": "10C",
    "iUpper32": "5H",
    "iUpper33": "9H",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnet1": Array [
      "Green",
    ],
    "lMagnet2": Array [
      "Green",
    ],
    "lMagnet3": Array [
      "Green",
    ],
    "lMagnet4": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [
      "Green",
    ],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [
      "Orange",
    ],
    "lPower3": Array [
      "Orange",
    ],
    "lPower4": Array [
      "Orange",
    ],
    "lRampArrow": Array [],
    "lRampMini": Array [
      "Orange",
    ],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": true,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": false,
    "shooterDiverter": true,
    "spinnerValue": undefined,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine64",
    "children": Array [
      Object {
        "_name": "DropBank65",
        "children": Array [],
        "name": "DropBank65",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank66",
        "children": Array [],
        "name": "DropBank66",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank67",
        "children": Array [],
        "name": "DropBank67",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank68",
        "children": Array [],
        "name": "DropBank68",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank69",
        "children": Array [],
        "name": "DropBank69",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank70",
        "children": Array [],
        "name": "DropBank70",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game74",
        "children": Array [
          Object {
            "_name": "Player75",
            "children": Array [
              Object {
                "_name": "ClearHoles76",
                "children": Array [],
                "name": "ClearHoles76",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball80",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete81",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter82",
                        "children": Array [],
                        "name": "DropBankResetter82",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter83",
                        "children": Array [],
                        "name": "DropBankResetter83",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter84",
                        "children": Array [],
                        "name": "DropBankResetter84",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter85",
                        "children": Array [],
                        "name": "DropBankResetter85",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter86",
                        "children": Array [],
                        "name": "DropBankResetter86",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter87",
                        "children": Array [],
                        "name": "DropBankResetter87",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete81",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                  Object {
                    "_name": "Skillshot94",
                    "children": Array [],
                    "name": "Skillshot94",
                    "ownOuts": Object {
                      "iSS1": Object {
                        "fill": [Function],
                      },
                      "iSS2": Object {
                        "fill": [Function],
                      },
                      "iSS3": Object {
                        "fill": [Function],
                      },
                      "iSS4": Object {
                        "fill": [Function],
                      },
                      "iSS5": Object {
                        "fill": [Function],
                      },
                      "iSS6": Object {
                        "fill": [Function],
                      },
                      "iSS7": Object {
                        "fill": [Function],
                      },
                      "leftGate": false,
                      "rightGate": false,
                      "shooterDiverter": true,
                      "upperMagnet": undefined,
                    },
                    "state": Object {
                      "curAward": 0,
                      "gateMode": "Closed",
                      "shooterOpen": true,
                    },
                  },
                ],
                "name": "Ball80",
                "ownOuts": Object {},
                "state": Object {
                  "skillshot": "Skillshot94",
                  "tilted": false,
                },
              },
              Object {
                "_name": "Spinner77",
                "children": Array [],
                "name": "Spinner77",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 100,
                },
              },
              Object {
                "_name": "LeftOrbit78",
                "children": Array [],
                "name": "LeftOrbit78",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "Poker93",
                "children": Array [],
                "name": "Poker93",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": "8H",
                  "iCenter2": "QS",
                  "iCenter3": "QD",
                  "iLeft1": "AH",
                  "iLeft2": "JD",
                  "iLeft3": "QH",
                  "iLeft4": "7S",
                  "iMini1": "5C",
                  "iMini2": "7D",
                  "iMini3": "10H",
                  "iRight1": "KH",
                  "iRight2": "7H",
                  "iRight3": "JS",
                  "iRight4": "5D",
                  "iRight5": "6S",
                  "iUpper21": "JH",
                  "iUpper22": "7C",
                  "iUpper31": "10C",
                  "iUpper32": "5H",
                  "iUpper33": "9H",
                  "lEjectShowCards": Array [],
                  "lRampShowCards": Array [],
                  "lShooterShowCards": Array [],
                  "lockPost": undefined,
                  "rampUp": undefined,
                  "shooterDiverter": true,
                  "upperEject": undefined,
                },
                "state": Object {
                  "closeShooter": false,
                  "dealerCardsUsed": Array [],
                  "dealerHand": Array [
                    Object {
                      "flipped": true,
                      "num": 3,
                      "suit": "d",
                    },
                    Object {
                      "flipped": true,
                      "num": 6,
                      "suit": "h",
                    },
                    null,
                    null,
                    null,
                    null,
                    null,
                  ],
                  "dealerHandDesc": undefined,
                  "newMbs": Array [],
                  "newModes": Array [],
                  "playerCardsUsed": Array [],
                  "playerHand": Array [
                    Object {
                      "num": 3,
                      "suit": "h",
                    },
                    Object {
                      "num": 1,
                      "suit": "d",
                    },
                    null,
                    null,
                    null,
                    null,
                    null,
                  ],
                  "playerHandDesc": undefined,
                  "playerWins": undefined,
                  "pot": 400,
                  "slots": Array [
                    Object {
                      "num": 8,
                      "suit": "h",
                    },
                    Object {
                      "num": 12,
                      "suit": "s",
                    },
                    Object {
                      "num": 12,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                    Object {
                      "num": 7,
                      "suit": "h",
                    },
                    Object {
                      "num": 11,
                      "suit": "s",
                    },
                    Object {
                      "num": 5,
                      "suit": "d",
                    },
                    Object {
                      "num": 6,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "h",
                    },
                    Object {
                      "num": 11,
                      "suit": "d",
                    },
                    Object {
                      "num": 12,
                      "suit": "h",
                    },
                    Object {
                      "num": 7,
                      "suit": "s",
                    },
                    Object {
                      "num": 11,
                      "suit": "h",
                    },
                    Object {
                      "num": 7,
                      "suit": "c",
                    },
                    Object {
                      "num": 10,
                      "suit": "c",
                    },
                    Object {
                      "num": 5,
                      "suit": "h",
                    },
                    Object {
                      "num": 9,
                      "suit": "h",
                    },
                    Object {
                      "num": 5,
                      "suit": "c",
                    },
                    Object {
                      "num": 7,
                      "suit": "d",
                    },
                    Object {
                      "num": 10,
                      "suit": "h",
                    },
                  ],
                  "step": 2,
                },
              },
              Object {
                "_name": "PlayerOverrides79",
                "children": Array [],
                "name": "PlayerOverrides79",
                "ownOuts": Object {
                  "kickerEnable": undefined,
                  "leftGate": undefined,
                  "miniFlipperEnable": undefined,
                  "rampUp": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player75",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMiniReady": Array [
                "Green",
              ],
              "lPopperStatus": Array [
                "Green",
              ],
              "lPower1": Array [
                "Orange",
              ],
              "lPower2": Array [
                "Orange",
              ],
              "lPower3": Array [
                "Orange",
              ],
              "lPower4": Array [
                "Orange",
              ],
              "lRampMini": Array [
                "Orange",
              ],
              "lRampStartMb": Array [],
              "lShooterStartHand": Array [],
              "leftMagnet": false,
              "rampUp": true,
              "shooterDiverter": undefined,
            },
            "state": Object {
              "_score": 52000,
              "ball": "Ball80",
              "chips": 4,
              "closeShooter": false,
              "focus": "Poker93",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "miniReady": true,
              "modesQualified": Array [],
              "rampUp": true,
            },
          },
        ],
        "name": "Game74",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
          "playerUp": 0,
          "players": Array [
            "Player75",
          ],
        },
      },
      Object {
        "_name": "MachineOverrides71",
        "children": Array [
          Object {
            "_name": "EosPulse72",
            "children": Array [],
            "name": "EosPulse72",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides71",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine64",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnet1": Array [
        "Green",
      ],
      "lMagnet2": Array [
        "Green",
      ],
      "lMagnet3": Array [
        "Green",
      ],
      "lMagnet4": Array [
        "Green",
      ],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampMini": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": false,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "spinnerValue": undefined,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "ballsInTrough": 3,
      "ballsLocked": 0,
      "lastSwitchHit": Switch {
        "_state": true,
        "column": 4,
        "lastChange": 11863,
        "lastClosed": 11863,
        "lastOpened": undefined,
        "minOffTime": 150,
        "minOnTime": 10,
        "name": "right 2",
        "row": 2,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;

exports[`poker dont eject during cards 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "",
    "iCenter2": "",
    "iCenter3": "",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "",
    "iLeft4": "",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSpinner": "",
    "iUpper21": "",
    "iUpper22": "",
    "iUpper31": "",
    "iUpper32": "",
    "iUpper33": "",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [
      "White",
    ],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnet1": Array [
      "Green",
    ],
    "lMagnet2": Array [
      "Green",
    ],
    "lMagnet3": Array [
      "Green",
    ],
    "lMagnet4": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [
      "Green",
    ],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [
      "Orange",
    ],
    "lPower3": Array [
      "Orange",
    ],
    "lPower4": Array [
      "Orange",
    ],
    "lRampArrow": Array [],
    "lRampMini": Array [
      "Orange",
    ],
    "lRampShowCards": Array [
      "White",
    ],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [
      "White",
    ],
    "lShooterStartHand": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": true,
    "spinnerValue": undefined,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine104",
    "children": Array [
      Object {
        "_name": "DropBank105",
        "children": Array [],
        "name": "DropBank105",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank106",
        "children": Array [],
        "name": "DropBank106",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank107",
        "children": Array [],
        "name": "DropBank107",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank108",
        "children": Array [],
        "name": "DropBank108",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank109",
        "children": Array [],
        "name": "DropBank109",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank110",
        "children": Array [],
        "name": "DropBank110",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game114",
        "children": Array [
          Object {
            "_name": "Player115",
            "children": Array [
              Object {
                "_name": "ClearHoles116",
                "children": Array [],
                "name": "ClearHoles116",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": true,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball120",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete121",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter122",
                        "children": Array [],
                        "name": "DropBankResetter122",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter123",
                        "children": Array [],
                        "name": "DropBankResetter123",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter124",
                        "children": Array [],
                        "name": "DropBankResetter124",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter125",
                        "children": Array [],
                        "name": "DropBankResetter125",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter126",
                        "children": Array [],
                        "name": "DropBankResetter126",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter127",
                        "children": Array [],
                        "name": "DropBankResetter127",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete121",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                ],
                "name": "Ball120",
                "ownOuts": Object {},
                "state": Object {
                  "skillshot": undefined,
                  "tilted": false,
                },
              },
              Object {
                "_name": "Spinner117",
                "children": Array [],
                "name": "Spinner117",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 10,
                },
              },
              Object {
                "_name": "LeftOrbit118",
                "children": Array [],
                "name": "LeftOrbit118",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "Poker128",
                "children": Array [],
                "name": "Poker128",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": undefined,
                  "iCenter2": undefined,
                  "iCenter3": undefined,
                  "iLeft1": undefined,
                  "iLeft2": undefined,
                  "iLeft3": undefined,
                  "iLeft4": undefined,
                  "iMini1": undefined,
                  "iMini2": undefined,
                  "iMini3": undefined,
                  "iRight1": undefined,
                  "iRight2": undefined,
                  "iRight3": undefined,
                  "iRight4": undefined,
                  "iRight5": undefined,
                  "iUpper21": undefined,
                  "iUpper22": undefined,
                  "iUpper31": undefined,
                  "iUpper32": undefined,
                  "iUpper33": undefined,
                  "lEjectShowCards": Array [
                    "White",
                  ],
                  "lRampShowCards": Array [
                    "White",
                  ],
                  "lShooterShowCards": Array [
                    "White",
                  ],
                  "lockPost": false,
                  "rampUp": false,
                  "shooterDiverter": true,
                  "upperEject": false,
                },
                "state": Object {
                  "closeShooter": false,
                  "dealerCardsUsed": Array [
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "h",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "d",
                    },
                    Object {
                      "flipped": undefined,
                      "num": 4,
                      "suit": "c",
                    },
                    Object {
                      "flipped": false,
                      "num": 4,
                      "suit": "h",
                    },
                  ],
                  "dealerHand": Array [
                    Object {
                      "flipped": undefined,
                      "num": 3,
                      "suit": "h",
                    },
                    Object {
                      "flipped": undefined,
                      "num": 4,
                      "suit": "c",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "h",
                    },
                    Object {
                      "flipped": false,
                      "num": 5,
                      "suit": "s",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "d",
                    },
                    Object {
                      "flipped": false,
                      "num": 4,
                      "suit": "h",
                    },
                    Object {
                      "flipped": undefined,
                      "num": 2,
                      "suit": "c",
                    },
                  ],
                  "dealerHandDesc": "Two Pair",
                  "newMbs": Array [],
                  "newModes": Array [],
                  "playerCardsUsed": Array [
                    Object {
                      "num": 13,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                  ],
                  "playerHand": Array [
                    Object {
                      "num": 7,
                      "suit": "s",
                    },
                    Object {
                      "num": 11,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "d",
                    },
                    Object {
                      "num": 3,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                    Object {
                      "num": 1,
                      "suit": "s",
                    },
                    Object {
                      "num": 9,
                      "suit": "c",
                    },
                  ],
                  "playerHandDesc": "Pair",
                  "playerWins": false,
                  "pot": 1400,
                  "slots": Array [
                    Object {
                      "num": 1,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "c",
                    },
                    Object {
                      "num": 13,
                      "suit": "s",
                    },
                    Object {
                      "num": 8,
                      "suit": "h",
                    },
                    Object {
                      "num": 5,
                      "suit": "h",
                    },
                    Object {
                      "num": 4,
                      "suit": "s",
                    },
                    Object {
                      "num": 5,
                      "suit": "d",
                    },
                    Object {
                      "num": 3,
                      "suit": "s",
                    },
                    Object {
                      "num": 8,
                      "suit": "c",
                    },
                    Object {
                      "num": 10,
                      "suit": "s",
                    },
                    Object {
                      "num": 11,
                      "suit": "h",
                    },
                    Object {
                      "num": 8,
                      "suit": "s",
                    },
                    Object {
                      "num": 10,
                      "suit": "h",
                    },
                    Object {
                      "num": 12,
                      "suit": "d",
                    },
                    Object {
                      "num": 8,
                      "suit": "d",
                    },
                    Object {
                      "num": 10,
                      "suit": "d",
                    },
                    Object {
                      "num": 12,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "h",
                    },
                    Object {
                      "num": 9,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "c",
                    },
                  ],
                  "step": 8,
                },
              },
              Object {
                "_name": "PlayerOverrides119",
                "children": Array [],
                "name": "PlayerOverrides119",
                "ownOuts": Object {
                  "kickerEnable": undefined,
                  "leftGate": undefined,
                  "miniFlipperEnable": undefined,
                  "rampUp": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player115",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMiniReady": Array [
                "Green",
              ],
              "lPopperStatus": Array [
                "Green",
              ],
              "lPower1": Array [
                "Orange",
              ],
              "lPower2": Array [
                "Orange",
              ],
              "lPower3": Array [
                "Orange",
              ],
              "lPower4": Array [
                "Orange",
              ],
              "lRampMini": Array [
                "Orange",
              ],
              "lRampStartMb": Array [],
              "lShooterStartHand": Array [
                Array [
                  "Green",
                  "fl",
                ],
              ],
              "leftMagnet": false,
              "rampUp": true,
              "shooterDiverter": true,
            },
            "state": Object {
              "_score": 41000,
              "ball": "Ball120",
              "chips": 4,
              "closeShooter": false,
              "focus": "Poker128",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "miniReady": true,
              "modesQualified": Array [],
              "rampUp": true,
            },
          },
        ],
        "name": "Game114",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
          "playerUp": 0,
          "players": Array [
            "Player115",
          ],
        },
      },
      Object {
        "_name": "MachineOverrides111",
        "children": Array [
          Object {
            "_name": "EosPulse112",
            "children": Array [],
            "name": "EosPulse112",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides111",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine104",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnet1": Array [
        "Green",
      ],
      "lMagnet2": Array [
        "Green",
      ],
      "lMagnet3": Array [
        "Green",
      ],
      "lMagnet4": Array [
        "Green",
      ],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampMini": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": false,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "spinnerValue": undefined,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "ballsInTrough": 3,
      "ballsLocked": 0,
      "lastSwitchHit": Switch {
        "_state": true,
        "column": 6,
        "lastChange": 16474,
        "lastClosed": 16474,
        "lastOpened": undefined,
        "minOffTime": 25,
        "minOnTime": 25,
        "name": "upper eject",
        "row": 7,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;
